--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,3 +7,10 @@
 <% end %>
 
 </ul>
+
+
+<ul>
+  <% @lists.each do |list| %>
+    <li><%= link_to list.name, list_path(list) %></li>
+  <% end %>
+</ul>
